--- a/wiki/Sketcher_ConstrainEqual.html
+++ b/wiki/Sketcher_ConstrainEqual.html
@@ -1,18 +1,18 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Sketcher ConstrainEqual</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-Sketcher+ConstrainEqual&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="de/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--complete" title="Sketcher GleichheitFestlegen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="de/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--high" title="Sketcher GleichheitFestlegen (88% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
-<li><a href="es/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--low" title="Croquizador RestringirIgual (14% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><a href="fr/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--complete" title="Sketcher Contrainte d'&eacute;galit&eacute; (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><a href="it/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--complete" title="Sketcher: Vincolo uguale (100% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="pl/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--complete" title="Szkicownik: Wi&#261;zanie r&oacute;wno&#347;ci (100% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="es/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--low" title="Croquizador RestringirIgual (12% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
+<li><a href="fr/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--high" title="Sketcher Contrainte d'&eacute;galit&eacute; (88% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="it/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--high" title="Sketcher: Vincolo uguale (88% translated)" lang="it" dir="ltr">italiano</a></li>
+<li><a href="pl/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--high" title="Szkicownik: Wi&#261;zanie r&oacute;wno&#347;ci (88% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="pt/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--low" title="Constraint EqualLength (0% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
-<li><a href="pt-br/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--med" title="Restri&ccedil;&atilde;o de igualdade (21% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
-<li><a href="ro/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--low" title="Sketcher Constr&icirc;ngere de egalitate (14% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
+<li><a href="pt-br/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--med" title="Restri&ccedil;&atilde;o de igualdade (19% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
+<li><a href="ro/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--low" title="Sketcher Constr&icirc;ngere de egalitate (12% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="sv/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--low" title="Constraint EqualLength (0% translated)" lang="sv" dir="ltr">svenska</a></li>
 <li><a href="cs/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--low" title="Vazba Shodn&eacute; (EqualLength) (0% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
-<li><a href="ru/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--high" title="&#1057;&#1082;&#1077;&#1090;&#1095;&#1077;&#1088; &#1054;&#1075;&#1088;&#1072;&#1085;&#1080;&#1095;&#1077;&#1085;&#1080;&#1077; &#1101;&#1082;&#1074;&#1080;&#1074;&#1072;&#1083;&#1077;&#1085;&#1090;&#1085;&#1086;&#1089;&#1090;&#1100;&#1102; (93% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
-<li><a href="ja/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--low" title="&#12473;&#12465;&#12483;&#12481;&#12515;&#12540;Sketcher ConstrainEqual (14% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
-<li><a href="ko/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--high" title="&#49828;&#52992;&#52824;&#51032; &#46041;&#51068;&#44396;&#49549; (86% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
+<li><a href="ru/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--high" title="&#1057;&#1082;&#1077;&#1090;&#1095;&#1077;&#1088; &#1054;&#1075;&#1088;&#1072;&#1085;&#1080;&#1095;&#1077;&#1085;&#1080;&#1077; &#1101;&#1082;&#1074;&#1080;&#1074;&#1072;&#1083;&#1077;&#1085;&#1090;&#1085;&#1086;&#1089;&#1090;&#1100;&#1102; (81% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
+<li><a href="ja/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--low" title="&#12473;&#12465;&#12483;&#12481;&#12515;&#12540;Sketcher ConstrainEqual (12% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
+<li><a href="ko/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--high" title="&#49828;&#52992;&#52824;&#51032; &#46041;&#51068;&#44396;&#49549; (75% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="File/Sketcher_ConstrainTangent.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="Sketcher_ConstrainTangent.html" title="Sketcher ConstrainTangent">Tangent/Collinear Constraint</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="File/Sketcher_ConstrainSymmetric.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="Sketcher_ConstrainSymmetric.html" title="Sketcher ConstrainSymmetric">Symmetric Constraint</a>
@@ -135,35 +135,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125102147
+Cached time: 20260125102558
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.105 seconds
-Real time usage: 0.140 seconds
+CPU time usage: 0.139 seconds
+Real time usage: 0.187 seconds
 Preprocessor visited node count: 448/1000000
 Post&#8208;expand include size: 24396/2097152 bytes
 Template argument size: 9753/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 3474/5000000 bytes
+Unstrip post&#8208;expand size: 3454/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   17.273      1 -total
- 31.06%    5.364      1 Template:Sketcher_Tools_navi
- 22.25%    3.844      2 Template:Navigation_menu_2
- 13.21%    2.281      1 Template:GuiCommand
- 11.93%    2.061      1 Template:Userdocnavi
- 10.17%    1.756      1 Template:Code
-  8.83%    1.525      2 Template:Docnav
-  6.78%    1.171      2 Template:Incode
-  4.50%    0.777      3 Template:KEY
-  4.45%    0.768      5 Template:MenuCommand
+100.00%   28.827      1 -total
+ 25.46%    7.340      1 Template:Sketcher_Tools_navi
+ 18.85%    5.434      2 Template:Navigation_menu_2
+ 16.80%    4.842      1 Template:Userdocnavi
+ 16.29%    4.696      1 Template:GuiCommand
+ 11.93%    3.438      2 Template:Docnav
+  8.30%    2.392      2 Template:Version
+  5.19%    1.496      1 Template:Code
+  4.39%    1.265      3 Template:KEY
+  3.98%    1.147      2 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:1755-0!canonical and timestamp 20260125102225 and revision id 1743584. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:1755-0!canonical and timestamp 20260125102558 and revision id 1743585. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="site.js"></script>
