--- a/wiki/Installing_on_Linux.html
+++ b/wiki/Installing_on_Linux.html
@@ -120,8 +120,7 @@
 </pre></div>
 <div class="mw-collapsible mw-collapsed toccolours">
 <h2><span class="mw-headline" id="OpenSUSE">OpenSUSE</span></h2>
-<p>FreeCAD can be installed with Myrlyn (which is the replacement for YAST since September 2025).
-</p><p>FreeCAD can also be installed from the terminal/console (root rights required) with:
+<p>FreeCAD can be installed with Myrlyn (which has replaced YAST in September 2025), or in any terminal/console (root rights required) with:
 </p>
 <dl><dd><div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">zypper</span> <span class="n">install</span> <span class="n">FreeCAD</span>
 </pre></div></dd></dl>
@@ -223,12 +222,12 @@ releases from the github repository. These also tend to work on most x86_64 Linu
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125103253
+Cached time: 20260125103532
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.112 seconds
-Real time usage: 0.122 seconds
+CPU time usage: 0.131 seconds
+Real time usage: 0.179 seconds
 Preprocessor visited node count: 700/1000000
 Post&#8208;expand include size: 9350/2097152 bytes
 Template argument size: 3483/2097152 bytes
@@ -239,19 +238,19 @@ Unstrip post&#8208;expand size: 12849/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   26.165      1 -total
- 26.17%    6.847     18 Template:Code
- 15.70%    4.109      1 Template:Userdocnavi
- 12.63%    3.305      2 Template:Docnav
-  9.00%    2.355      1 Template:Navigation_menu_2
-  6.16%    1.611     13 Template:Incode
-  5.69%    1.488      3 Template:MenuCommand
-  5.42%    1.418      1 Template:Button
-  5.17%    1.353      1 Template:KEY
-  5.08%    1.330      7 Template:Emphasis
+100.00%   26.513      1 -total
+ 36.39%    9.647     18 Template:Code
+ 14.80%    3.924      1 Template:Userdocnavi
+  9.35%    2.480      1 Template:Navigation_menu_2
+  9.31%    2.467      2 Template:Docnav
+  5.74%    1.523     13 Template:Incode
+  4.53%    1.201      1 Template:KEY
+  4.23%    1.122      7 Template:Emphasis
+  4.08%    1.083      1 Template:TOCright
+  3.71%    0.984      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:199690-0!canonical and timestamp 20260125103257 and revision id 1743651. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:199690-0!canonical and timestamp 20260125103537 and revision id 1743658. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
