--- a/wiki/Cables_Compatibility_with_BIM_Workbench.html
+++ b/wiki/Cables_Compatibility_with_BIM_Workbench.html
@@ -49,7 +49,7 @@
 </td></tr>
 
 <tr>
-<td>The object supports <a href="Arch_Component.html#Data" title="Arch Component">Component-&gt;Move Base</a>
+<td>The object supports <a href="Arch_Component.html#Data" title="Arch Component">Component &rarr; Move Base</a>
 </td>
 <td><a href="Cables_Cable.html" title="Cables Cable">Cable</a>, <a href="Cables_CableConduit.html" title="Cables CableConduit">CableConduit</a>, <a href="Cables_CableBox.html" title="Cables CableBox">CableBox</a>, <a href="Cables_CableConnector.html" title="Cables CableConnector">CableConnector</a>, <a href="Cables_CableLightPoint.html" title="Cables CableLightPoint">CableLightPoint</a>, <a href="Cables_ElectricalDevice.html" title="Cables ElectricalDevice">ElectricalDevice</a>
 </td>
@@ -57,7 +57,7 @@
 </td></tr>
 
 <tr>
-<td>The object supports <a href="Arch_Component.html#Data" title="Arch Component">Component-&gt;Move With Host</a>
+<td>The object supports <a href="Arch_Component.html#Data" title="Arch Component">Component &rarr; Move With Host</a>
 </td>
 <td><a href="Cables_Cable.html" title="Cables Cable">Cable</a>, <a href="Cables_CableConduit.html" title="Cables CableConduit">CableConduit</a>, <a href="Cables_CableBox.html" title="Cables CableBox">CableBox</a>, <a href="Cables_CableConnector.html" title="Cables CableConnector">CableConnector</a>, <a href="Cables_CableLightPoint.html" title="Cables CableLightPoint">CableLightPoint</a>, <a href="Cables_ElectricalDevice.html" title="Cables ElectricalDevice">ElectricalDevice</a>
 </td>
@@ -65,7 +65,7 @@
 </td></tr>
 
 <tr>
-<td>The object can make use of <a href="Arch_Component.html#Data" title="Arch Component">Component-&gt;Base</a> property
+<td>The object can make use of <a href="Arch_Component.html#Data" title="Arch Component">Component &rarr; Base</a> property
 </td>
 <td><a href="Cables_Cable.html" title="Cables Cable">Cable</a>, <a href="Cables_CableConduit.html" title="Cables CableConduit">CableConduit</a>, (<a href="Cables_CableBox.html" title="Cables CableBox">CableBox</a>, <a href="Cables_CableConnector.html" title="Cables CableConnector">CableConnector</a>, <a href="Cables_ElectricalDevice.html" title="Cables ElectricalDevice">ElectricalDevice</a>) <sup><a href="#Note_1">[1]</a></sup>
 </td>
@@ -73,7 +73,7 @@
 </td></tr>
 
 <tr>
-<td>The object supports <a href="Arch_Component.html#Data" title="Arch Component">Component-&gt;Additions/Subtractions</a>
+<td>The object supports <a href="Arch_Component.html#Data" title="Arch Component">Component &rarr; Additions/Subtractions</a>
 </td>
 <td><a href="Cables_Cable.html" title="Cables Cable">Cable</a>, <a href="Cables_CableConduit.html" title="Cables CableConduit">CableConduit</a>, <a href="Cables_CableBox.html" title="Cables CableBox">CableBox</a>, <a href="Cables_CableConnector.html" title="Cables CableConnector">CableConnector</a>, <a href="Cables_CableLightPoint.html" title="Cables CableLightPoint">CableLightPoint</a>
 </td>
@@ -98,16 +98,16 @@
 </p>
 </td></tr></tbody></table>
 <h2><span class="mw-headline" id="Note_1">Note 1</span></h2>
-<p>The object supports <a href="Arch_Component.html#Data" title="Arch Component">Component-&gt;Base</a> property partially. It does not follow the base placement.
+<p>The object supports <a href="Arch_Component.html#Data" title="Arch Component">Component &rarr; Base</a> property partially. It does not follow the base placement.
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260125103723
+Cached time: 20260125103906
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.013 seconds
-Real time usage: 0.020 seconds
+CPU time usage: 0.017 seconds
+Real time usage: 0.017 seconds
 Preprocessor visited node count: 92/1000000
 Post&#8208;expand include size: 207/2097152 bytes
 Template argument size: 0/2097152 bytes
@@ -118,11 +118,11 @@ Unstrip post&#8208;expand size: 0/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    4.253      1 Template:Prettytable
-100.00%    4.253      1 -total
+100.00%    1.411      1 Template:Prettytable
+100.00%    1.411      1 -total
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411514-0!canonical and timestamp 20260125103744 and revision id 1743685. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411514-0!canonical and timestamp 20260125103907 and revision id 1743690. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
