--- a/wiki/Cables_Compatibility_with_BIM_Workbench.html
+++ b/wiki/Cables_Compatibility_with_BIM_Workbench.html
@@ -3,9 +3,8 @@
 <h2><span class="mw-headline" id="Compatibility_table_of_the_Cables_Workbench_with_the_BIM_Workbench">Compatibility table of the Cables Workbench with the BIM Workbench</span></h2>
 <p>The table below contains a summary of areas in which the elements created in <a href="Cables_Workbench.html" title="Cables Workbench">Cables Workbench</a> match the rules and structure from <a href="BIM_Workbench.html" title="BIM Workbench">BIM Workbench</a>.
 </p><p>Elements are understood to be all objects with a shape type solid or compound of solids. There are currently six such objects in Cables Workbench: <a href="Cables_Cable.html" title="Cables Cable">Cable</a>, <a href="Cables_CableConduit.html" title="Cables CableConduit">CableConduit</a>, <a href="Cables_CableBox.html" title="Cables CableBox">CableBox</a>, <a href="Cables_CableConnector.html" title="Cables CableConnector">CableConnector</a>, <a href="Cables_CableLightPoint.html" title="Cables CableLightPoint">CableLightPoint</a>, <a href="Cables_ElectricalDevice.html" title="Cables ElectricalDevice">ElectricalDevice</a>
-</p><p><br>
 </p>
-<table border="2" cellspacing="0" cellpadding="4" rules="all" class="hintergrundfarbe1 rahmenfarbe1" style="margin:1em 1em 1em 0; border-style:solid; border-width:1px; border-collapse:collapse; empty-cells:show;">
+<table class="wikitable">
 
 
 <tbody><tr>
@@ -102,27 +101,26 @@
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260125103906
+Cached time: 20260125104033
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.017 seconds
-Real time usage: 0.017 seconds
-Preprocessor visited node count: 92/1000000
-Post&#8208;expand include size: 207/2097152 bytes
+CPU time usage: 0.012 seconds
+Real time usage: 0.013 seconds
+Preprocessor visited node count: 87/1000000
+Post&#8208;expand include size: 0/2097152 bytes
 Template argument size: 0/2097152 bytes
-Highest expansion depth: 3/100
+Highest expansion depth: 2/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
 Unstrip post&#8208;expand size: 0/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    1.411      1 Template:Prettytable
-100.00%    1.411      1 -total
+100.00%    0.000      1 -total
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411514-0!canonical and timestamp 20260125103907 and revision id 1743690. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411514-0!canonical and timestamp 20260125104105 and revision id 1743695. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
