--- a/wiki/Cables_Compatibility_with_BIM_Workbench.html
+++ b/wiki/Cables_Compatibility_with_BIM_Workbench.html
@@ -1,5 +1,5 @@
-<link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Cables Compatibility with BIM Workbench</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><p><br>
-</p>
+<link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Cables Compatibility with BIM Workbench</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-Cables+Compatibility+with+BIM+Workbench&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
+<li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li></ul></div>
 <h2><span class="mw-headline" id="Compatibility_table_of_the_Cables_Workbench_with_the_BIM_Workbench">Compatibility table of the Cables Workbench with the BIM Workbench</span></h2>
 <p>The table below contains a summary of areas in which the elements created in the <a href="Cables_Workbench.html" title="Cables Workbench">Cables Workbench</a> match the rules and structure from the <a href="BIM_Workbench.html" title="BIM Workbench">BIM Workbench</a>.
 </p><p>Elements are understood to be all objects with a shape type solid or compound of solids. There are currently six such objects in Cables Workbench: <a href="Cables_Cable.html" title="Cables Cable">Cable</a>, <a href="Cables_CableConduit.html" title="Cables CableConduit">CableConduit</a>, <a href="Cables_CableBox.html" title="Cables CableBox">CableBox</a>, <a href="Cables_CableConnector.html" title="Cables CableConnector">CableConnector</a>, <a href="Cables_CableLightPoint.html" title="Cables CableLightPoint">CableLightPoint</a>, <a href="Cables_ElectricalDevice.html" title="Cables ElectricalDevice">ElectricalDevice</a>
@@ -101,26 +101,26 @@
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260125104132
+Cached time: 20260125104200
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.012 seconds
-Real time usage: 0.021 seconds
-Preprocessor visited node count: 87/1000000
+CPU time usage: 0.019 seconds
+Real time usage: 0.028 seconds
+Preprocessor visited node count: 157/1000000
 Post&#8208;expand include size: 0/2097152 bytes
 Template argument size: 0/2097152 bytes
 Highest expansion depth: 2/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 0/5000000 bytes
+Unstrip post&#8208;expand size: 541/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
 100.00%    0.000      1 -total
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411514-0!canonical and timestamp 20260125104142 and revision id 1743696. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411514-0!canonical and timestamp 20260125104200 and revision id 1743697. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
